GNOME Bugzilla – Bug 672002
Keynav doesn't work on Places sidebar if nothing is selected
Last modified: 2012-03-19 15:29:49 UTC
You can Tab to the Places sidebar, change the selection with the arrow keys, and press Enter to change the current folder. But if there's nothing currently selected in the sidebar (if you're in a folder with no Places entry), the arrow keys do nothing. You'll see a focus rectangle on something (probably Devices), but there's no way to navigate.
Thanks for the report; I now pushed a fix for this to git master.