places-sidebar: focus the first non-heading row on focus-in

Instead of giving the focus to the heading, which would end up in
getting stuck there, since headings are not supposed to be actionable.

https://bugzilla.gnome.org/show_bug.cgi?id=672002